// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DropdownFilter renders a 'clear filters' button when filters are applied 1`] = `
<body>
  <div>
    <div
      class="filtersDropdown"
    >
      <div
        class="filterOptions"
      >
        <div
          class="filterOptions_grouping"
        >
          <label
            for="category"
          >
            Category
          </label>
          <select
            class="usa-select filtersSelect"
            data-testid="Select"
            id="category"
            name="category"
          >
            <option
              value=""
            />
            <option
              value="labs"
            >
              Labs
            </option>
            <option
              value="medications"
            >
              Medications
            </option>
            <option
              value="conditions"
            >
              Conditions
            </option>
          </select>
        </div>
        <div
          class="filterOptions_grouping"
        >
          <label
            for="code-system"
          >
            Code system
          </label>
          <select
            class="usa-select filtersSelect"
            data-testid="Select"
            id="code-system"
            name="code-system"
          >
            <option
              value=""
            />
            <option
              value="http://hl7.org/fhir/sid/icd-10-cm"
            >
              ICD-10
            </option>
            <option
              value="http://hl7.org/fhir/sid/cvx"
            >
              CVX
            </option>
            <option
              value="http://www.nlm.nih.gov/research/umls/rxnorm"
            >
              RXNORM
            </option>
            <option
              value="http://loinc.org"
            >
              LOINC
            </option>
            <option
              value="http://cap.org/eCC"
            >
              ECC
            </option>
            <option
              value="http://snomed.info/sct"
            >
              SNOMED
            </option>
          </select>
        </div>
        <div
          class="filterOptions_grouping"
        >
          <label
            for="creator"
          >
            Creator
          </label>
          <select
            class="usa-select filtersSelect"
            data-testid="Select"
            id="creator"
            name="creator"
          >
            <option
              value=""
            />
            <option
              value="DIBBs"
            >
              DIBBs
            </option>
            <option
              value="QC Admin"
            >
              QC Admin
            </option>
            <option
              value="My Team(s)"
            >
              My Team(s)
            </option>
          </select>
        </div>
      </div>
      <div
        class="shortcuts"
      >
        <span
          class="text-italic"
        >
          Shortcuts:
        </span>
        <button>
          Created by me
        </button>
        <button>
          Created by my team
        </button>
      </div>
      <div
        class="dropdownButtons"
      >
        <button
          class="usa-button clearFiltersBtn"
          data-testid="button"
          type="button"
        >
          Clear all filters
        </button>
        <button
          class="usa-button clearFiltersBtn"
          data-testid="button"
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`DropdownFilter renders correctly 1`] = `
<body>
  <div>
    <div
      class="filtersDropdown"
    >
      <div
        class="filterOptions"
      >
        <div
          class="filterOptions_grouping"
        >
          <label
            for="category"
          >
            Category
          </label>
          <select
            class="usa-select filtersSelect"
            data-testid="Select"
            id="category"
            name="category"
          >
            <option
              value=""
            />
            <option
              value="labs"
            >
              Labs
            </option>
            <option
              value="medications"
            >
              Medications
            </option>
            <option
              value="conditions"
            >
              Conditions
            </option>
          </select>
        </div>
        <div
          class="filterOptions_grouping"
        >
          <label
            for="code-system"
          >
            Code system
          </label>
          <select
            class="usa-select filtersSelect"
            data-testid="Select"
            id="code-system"
            name="code-system"
          >
            <option
              value=""
            />
            <option
              value="http://hl7.org/fhir/sid/icd-10-cm"
            >
              ICD-10
            </option>
            <option
              value="http://hl7.org/fhir/sid/cvx"
            >
              CVX
            </option>
            <option
              value="http://www.nlm.nih.gov/research/umls/rxnorm"
            >
              RXNORM
            </option>
            <option
              value="http://loinc.org"
            >
              LOINC
            </option>
            <option
              value="http://cap.org/eCC"
            >
              ECC
            </option>
            <option
              value="http://snomed.info/sct"
            >
              SNOMED
            </option>
          </select>
        </div>
        <div
          class="filterOptions_grouping"
        >
          <label
            for="creator"
          >
            Creator
          </label>
          <select
            class="usa-select filtersSelect"
            data-testid="Select"
            id="creator"
            name="creator"
          >
            <option
              value=""
            />
            <option
              value="DIBBs"
            >
              DIBBs
            </option>
            <option
              value="QC Admin"
            >
              QC Admin
            </option>
            <option
              value="My Team(s)"
            >
              My Team(s)
            </option>
          </select>
        </div>
      </div>
      <div
        class="shortcuts"
      >
        <span
          class="text-italic"
        >
          Shortcuts:
        </span>
        <button>
          Created by me
        </button>
        <button>
          Created by my team
        </button>
      </div>
      <div
        class="dropdownButtons"
      >
        <button
          class="usa-button clearFiltersBtn"
          data-testid="button"
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</body>
`;
